cluster/n8n/manisfests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`n8n.home`)
      kind: Rule
      services:
        - name: n8n-service
          port: 80
